# Apex-Insights

./: .Rprofile  .gitignore  .lintr  .mailmap  Dockerfile  Makefile  README.md  _targets.R  _targets.R.bak.20260117213044  config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
R/: clean.R  features.R  io_read.R  io_write.R  logging.R  model_score.R  model_train.R  model_validation.R  utils.R  validate.R
artifacts/data/: preds.rds
artifacts/models/: model.rds
artifacts/reports/: model_validation_report.md
data/raw/: accounts.csv  customers.json  input.csv  merchant_categories.csv  risk_scores.csv  transactions.csv
docs/: performance_optimization.md
public/: index.html
renv/: .gitignore  activate.R
reports/: report.qmd
sql/: 01_create_tables.sql  02_data_quality_checks.sql  03_reconciliation_checks.sql  04_customer_monthly_summary.sql  05_window_functions.sql  06_optimization_notes.sql
src/apex_insights/: __init__.py  __main__.py  config.py  ingest.py  model.py  pipeline.py  quality.py  reconcile.py  transform.py  write.py
tests/: testthat.R
tests/python/: test_pipeline_contract.py
tests/testthat/: helper-source.R  test-clean.R  test-model-validation.R
tests/testthat/tests/testthat/: test-model-train.R
