[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-insights"
version = "0.2.0"
description = "Finance analytics project with R reporting and a PySpark lakehouse pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alok Priyadarshi" }]
dependencies = [
    "pyspark>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
